feat: use format to set the type
使用format将size字段设置为int64
